<resources>
    <string name="app_name">CardScore</string>
    <string name="ready_next_match">Pronto para a próxima partida?</string>
    <string name="choose_the_game">Escolha um jogo</string>
    <string name="icon_game_truco">icone do jogo truco</string>
    <string name="truco">Truco</string>
    <string name="points_format">%s pontos clássicos</string>
    <string name="buraco">Buraco</string>
    <string name="canastra">Canastra</string>
    <string name="icon_game_custom">icone_do_jogo_personalizado</string>
    <string name="custom">Personalizado</string>
    <string name="define_your_rules">Defina suas regras</string>
    <string name="new_game">+ Novo Jogo</string>
    <string name="history">Histórico</string>
    <string name="statistics">Estatísticas</string>
    <string name="icon_game_buraco">icone do jogo de buraco</string>
    <string name="icon_canastra_game">icone do jogo de canastra</string>
    <string name="icon_poker_game">icone do jogo de poker</string>
    <string name="poker">Poker</string>
    <string name="chips_and_bets">Fichas e apostas</string>
    <string name="doze_pontos_classicos">12 pontos clássicos</string>
    <string name="partida_em_duplas">Partida em duplas</string>
    <string name="icone_dos_jogadores">Icone dos jogadores</string>
    <string name="identifique_os_participantes">Identifique os participantes</string>
    <string name="jogadores">Jogadores</string>
    <string name="equipe_jogador_1">Equipe / Jogador 1</string>
    <string name="equipe_1">Equipe 1</string>
    <string name="equipe_jogador_2">Equipe / Jogador 2</string>
    <string name="equipe_2">Equipe 2</string>
    <string name="nome_equipe_2">nome equipe 2</string>
    <string name="nome_equipe_1">nome_equipe_1</string>
    <string name="pontuacao_maxima">PONTUAÇÃO MÁXIMA</string>
    <string name="pontuacao_padrao_buraco">1500 pts</string>
    <string name="pontos_para_equipe_1">Pontos para Equipe 1</string>
    <string name="adicionar_pontuacao_equipe_1">+ Adicionar</string>
    <string name="adicionar_pontuacao_equipe_2">+ Adicionar</string>
    <string name="pontos_para_equipe_2">Pontos para Equipe 2</string>
    <string name="reiniciar_partida">reiniciar partida</string>
    <string name="desfazer_marcacao">Desfazer ultima marcação</string>
    <string name="valor_inicial">0</string>
    <string name="pontuacao_inicial_equipe_1">0</string>
    <string name="pontuacao_inicial_equipe_2">0</string>
    <string name="placar_inicial_equipe_1">0</string>
    <string name="placar_inicial_equipe_2">0</string>
    <string name="add_6_equipe_2">+6</string>
    <string name="add_9_equipe_2">+9</string>
    <string name="add_12_equipe_2">+12</string>
    <string name="historico_de_jogadas">Histórico de jogadas</string>
    <string name="nenhuma_jogada_ainda">Nenhuma jogada ainda.</string>
    <string name="add_3_equipe_2">+3</string>
    <string name="add_1_equipe_2">+1</string>
    <string name="add_pontos_para_equipe_2">+ pontos para %s</string>
    <string name="add_12_equipe_1">+12</string>
    <string name="add_9_equipe_1">+9</string>
    <string name="add_6_equipe_1">+6</string>
    <string name="add_3_equipe_1">+3</string>
    <string name="add_1_equipe_1">+1</string>
    <string name="quantidade_de_pontos_a_serem_marcados_para_a_equipe_1">pontos da rodada</string>
    <string name="quantidade_de_pontos_a_serem_marcados_para_a_equipe_2">pontos da rodada</string>
    <string name="historico_de_jogadas_realizadas">Histórico de jogadas</string>
    <string name="regras_da_partida">Regras da Partida</string>
    <string name="tipo_de_jogo_e_pontuacao">Tipo de jogo e pontuação</string>
    <string name="tipo_do_jogo">Tipo do Jogo</string>
    <string name="nome_do_tipo_jogo">nome do tipo jogo</string>
    <string name="pontua_o_maxima">Pontuação Máxima</string>
    <string name="iniciar_partida">Iniciar Partida</string>
    <string name="pontua_o_maxima_maiuscula">PONTUAÇÃO MÁXIMA</string>
    <string name="doze_pts">12 pts</string>
    <string name="add_pontos_para_equipe_1">+ pontos para %s</string>
    <string name="digite_a_pontuacao_maxima_do_jogo">digite a pontuação máxima do jogo</string>
    <string name="disponivel_versao_paga">No momento, esta funcionalidade está disponível apenas na versão paga.</string>
    <string name="finalizar_a_partida">finalizar a partida</string>
    <string name="reiniciar_a_partida">Reiniciar a partida</string>
    <string name="reverter_ultima_pontuacao">Reverter última pontuação</string>
</resources>
