<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F8"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="64dp"
    android:paddingRight="32dp"
    tools:context=".NomesJogaresActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_bola_roxa"
                    android:contentDescription="@string/icone_dos_jogadores"
                    app:srcCompat="@drawable/outline_group_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jogadores"
                        android:textColor="#1A1A1A"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/identifique_os_participantes"
                        android:textColor="#666666"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/equipe_jogador_1"
                    android:textColor="#444444"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nome_equipe_um"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="username"
                    android:hint="@string/nome_equipe_1"
                    android:maxLength="12"
                    android:inputType="text"
                    android:labelFor="@id/nome_equipe_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equipe_jogador_2"
                    android:textColor="#444444"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nome_equipe_dois"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="username"
                    android:hint="@string/nome_equipe_2"
                    android:inputType="text"
                    android:maxLength="12"
                    android:labelFor="@id/nome_equipe_2" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:onClick="iniciarPartidaTruco"
        android:text="@string/iniciar_partida" />


</LinearLayout>