<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="#F8F9FD"
    android:orientation="vertical"
    tools:context=".OutrosJogosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pontuacao_maxima"
        android:textColor="#555555"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pontuacao_maxima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipo_jogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#004694"
        app:cardCornerRadius="32dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/placar_nome_equipe_um"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#A0C4FF"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pontuacao_equipe_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placar_inicial_equipe_1"
                    android:textColor="#FFFFFF"
                    android:textSize="70sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#20FFFFFF" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/placar_nome_equipe_dois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#A0C4FF"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pontuacao_equipe_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placar_inicial_equipe_2"
                    android:textColor="#FFFFFF"
                    android:textSize="70sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nome_equipe_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:textColor="#666666"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:id="@+id/pontos_equipe_um"
            android:hint="@string/quantidade_de_pontos_a_serem_marcados_para_a_equipe_1"
            android:labelFor="@+id/pontucao_corrente_equipe_1"
            android:layout_height="54dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="2"
            android:background="@drawable/bg_fundo_cinza"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#1D2A44"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <Button
            android:layout_width="16dp"
            android:onClick="adicionarPontuacaoEquipeUm"
            android:layout_height="54dp"
            android:layout_weight="1.2"
            android:text="@string/adicionar_pontuacao_equipe_1"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#8194E3"
            app:cornerRadius="24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/nome_equipe_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#666666"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:hint="@string/quantidade_de_pontos_a_serem_marcados_para_a_equipe_2"
            android:id="@+id/pontos_equipe_dois"
            android:layout_height="54dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="2"
            android:background="@drawable/bg_fundo_cinza"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="#1D2A44"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <Button
            android:layout_width="16dp"
            android:onClick="adicionarPontuacaoEquipeDois"
            android:layout_height="54dp"
            android:layout_weight="1.2"
            android:text="@string/adicionar_pontuacao_equipe_2"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#8194E3"
            app:cornerRadius="24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            style="?android:attr/absListViewStyle"
            android:layout_width="0dp"
            android:contentDescription="@string/reverter_ultima_pontuacao"
            android:onClick="reverterUltimaPontuacao"
            android:layout_height="54dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#FFF9C4"
            android:layout_weight="1"
            app:icon="@drawable/outline_keyboard_return_24"
            app:iconTint="#666666"
            app:iconGravity="textStart"
            android:textColor="#666666"
            android:textSize="20sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="24dp"
            app:strokeColor="#E0E0E0"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            />

        <Button
            style="?android:attr/absListViewStyle"
            android:layout_width="0dp"
            android:onClick="reiniciarPartida"
            android:layout_height="54dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/reiniciar_a_partida"
            android:layout_weight="1"
            app:icon="@drawable/outline_restart_alt_24"
            app:iconTint="#666666"
            app:iconGravity="textStart"
            android:backgroundTint="#FFE0B2"
            android:textColor="#666666"
            android:textSize="18sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="24dp"
            app:strokeColor="#E0E0E0"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <Button
            style="?android:attr/absListViewStyle"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:onClick="finalizarPartida"
            android:contentDescription="@string/finalizar_a_partida"
            app:iconGravity="textStart"
            android:layout_weight="1.2"
            app:icon="@drawable/outline_flag_24"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="#E51C23"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="24dp"
            app:strokeColor="#E0E0E0"
            app:strokeWidth="1dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/historico_de_jogadas_realizadas"
        android:textColor="#1D2A44"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/historico_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/nenhuma_jogada_ainda"
        android:textColor="#888888"
        android:textSize="14sp"
        android:textStyle="italic" />

</LinearLayout>
